[project]
name = "kiraai-plugin-jmdown"
version = "1.0.0"
description = "JMComic downloader plugin for KiraAI — download, convert to PDF, cache management"
requires-python = ">=3.11"
dependencies = [
    "jmcomic>=2.7",
    "Pillow>=11",
    "img2pdf>=0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jmdown*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
